GNOME Bugzilla – Bug 690733
Assertion when trying to add contacts with only a SIP account connnected
Last modified: 2012-12-26 11:48:54 UTC
- Connect only a SIP account - Try adding a contact (lt-empathy:8562): folks-CRITICAL **: folks_persona_store_get_can_add_personas: assertion `self != NULL' failed
+ Trace 231320
Created attachment 232234 [details] [review] roster-window: prevent adding contact if not supported by CM
Review of attachment 232234 [details] [review]: ::: src/empathy-roster-window.c @@ +482,3 @@ + gtk_widget_set_sensitive (self->priv->button_add_contact, + can_add_contact (self)); + Now you have 2 places where you call gtk_widget_set_visible() on button_add_contact. I think it would be nicer to change the gtk_widget_set_visible() above with "(flags & PAGE_MESSAGE_FLAG_ADD_CONTACT) != 0 && can_add_contact (self)".
Review of attachment 232234 [details] [review]: ::: src/empathy-roster-window.c @@ +482,3 @@ + gtk_widget_set_sensitive (self->priv->button_add_contact, + can_add_contact (self)); + No, in this case the button is displayed (set_visibile (true)) but not sensitive (set_sensitive (false)). Do you think I should hide it in this case as well?
+1
Attachment 232234 [details] pushed as b3ab97d - roster-window: prevent adding contact if not supported by CM