roster-window: prevent adding contact if not supported by CM

https://bugzilla.gnome.org/show_bug.cgi?id=690733